--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,10 +22,12 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Cache Node Modules
+      - name: Cache Dependencies & Build Artifacts
         uses: actions/cache@v3
         with:
-          path: node_modules
+          path: |
+            node_modules
+            .docusaurus
           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
@@ -44,16 +46,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
-          force_orphan: true
-
-      - name: Push to gh-pages manually
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "Deploy to GitHub Pages"
-          git push origin gh-pages
-
-concurrency:
-  group: deploy-${{ github.ref }}
-  cancel-in-progress: true
